# AI-as-a-Service

./: README.md
native_model_zoo/: README.md
native_model_zoo/face_detection_mtcnn/: Cargo.toml  README.md
native_model_zoo/face_detection_mtcnn/src/: main.rs
native_model_zoo/http_proxy/: Cargo.toml  README.md
native_model_zoo/http_proxy/src/: main.rs
native_model_zoo/image_classification_mobilenet/: Cargo.toml
native_model_zoo/image_classification_mobilenet/src/: main.rs
native_model_zoo/image_classification_mobilenet_v2_14_224/: Cargo.toml  README.md
native_model_zoo/image_classification_mobilenet_v2_14_224/src/: main.rs
native_model_zoo/mobilenet_v2/: Cargo.toml  README.md
native_model_zoo/mtcnn/: Cargo.toml  README.md
native_model_zoo/mtcnn/src/: main.rs
nodejs/face_detection_service/: Cargo.toml  README.md
nodejs/face_detection_service/node/: server.js
nodejs/face_detection_service/node/public/: index.html
nodejs/face_detection_service/src/: lib.rs
nodejs/face_detection_service/test/: test.js
nodejs/mobilenet_service/: README.md
nodejs/mobilenet_service/node/: server.js
nodejs/mobilenet_service/node/public/: index.html
nodejs/mobilenet_service/src/: lib.rs
nodejs/mobilenet_service/test/: test.js
nodejs/mobilenet_std/: Cargo.toml  README.md
nodejs/mobilenet_std/node/: server.js
nodejs/mobilenet_std/node/public/: index.html
nodejs/mobilenet_std/src/: lib.rs
nodejs/mobilenet_std/test/: test.js
nodejs/mtcnn_service/: Cargo.toml  README.md
nodejs/mtcnn_service/node/: server.js
nodejs/mtcnn_service/node/public/: index.html
